5_HandsOn_Tutorials/5.9_Service_Mesh/5.9.1_Istio/02_traffic_management/03-canary-deployment.yaml
---
# Canary deployment: 90% stable (v1), 10% canary (v2)
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 90
        - destination:
            host: reviews
            subset: v2
          weight: 10
