5_HandsOn_Tutorials/5.9_Service_Mesh/5.9.1_Istio/02_traffic_management/10-lb-least-request.yaml
---
# Load balancing strategy: Least Request
# Routes to the instance with the fewest active requests
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: reviews
  namespace: bookinfo
spec:
  host: reviews
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
