5_HandsOn_Tutorials/5.9_Service_Mesh/5.9.1_Istio/02_traffic_management/12-traffic-mirror.yaml
---
# Traffic mirroring: Send production traffic to v1, mirror to v2 for testing
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews
  http:
    - route:
        # Main production traffic goes to v1
        - destination:
            host: reviews
            subset: v1
          weight: 100
      # Mirror 100% of traffic to v2 (responses are discarded)
      mirror:
        host: reviews
        subset: v2
      mirrorPercentage:
        value: 100.0
