5_HandsOn_Tutorials/5.9_Service_Mesh/5.9.1_Istio/02_traffic_management/13-timeout.yaml
---
# Configure timeout for reviews service
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
    - reviews
  http:
    - route:
        - destination:
            host: reviews
            subset: v1
      # Request must complete within 2 seconds
      timeout: 2s
